--- a/education.html
+++ b/education.html
@@ -291,12 +291,12 @@
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;"></div>
         <div class="date date1">2021-2022</div>
         <div>
-            <h2 class="timelineHeading">Columbia University</h2>
-            <h6>Masters of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best Undergraduate Researcher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h2 class="timelineHeading">University of the Witwatersrand</h2>
+            <h6>Bachelors of Science Honours, Computer Science</h6>
+            <li>Graduated with Distinction</li>
+            <li>Research in the field of Machine Learning</li>
+            <li>Data Analysis, Visualisation and Exploration</li>
+            <li>Adaptive Computation and Machine Learning</li>
         </div>
       </div>
    </div> 
@@ -310,14 +310,13 @@
         <div>
             <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
         </div>
-        <div class="date date2">2017-2021</div>
+        <div class="date date2">2019-2021</div>
         <div class="alignment">
-            <h3 class="timelineHeading2">Massachusetts Institute of Technology</h3>
-            <h6>Bachelors of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h3 class="timelineHeading2">University of the Witwatersrand</h3>
+            <h6>Bachelors of Science, Computer Science</h6>
+            <li>Graduated with Distinction with Majors in Computer Science and Computational Applications</li>
+            <li>Dean's List - Year of Study 1</li>
+            <li>Certificate or First Class in Multiple Courses</li>
         </div>
       </div>
 
@@ -331,14 +330,13 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
-        <div class="date date3">2013-2017</div>
+        <div class="date date3">2013-2018</div>
         <div class="align-third">
-            <h2 class="timelineHeading3">Delhi Public School</h2>
+            <h2 class="timelineHeading3">St Peter's College</h2>
             <h6>High School</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <li>Final percentage range: 76%-82%</li>
+            <li>Overall average: 78.4%</li>
+            <li>Best in Geography for 3 consecutive years</li>
         </div>
       </div>
     </div>
